--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
 
-  <link href="https://api.fontshare.com/v2/css?f[]=rx-100@400&f[]=supreme@400,200,300&f[]=author@500,600&display=swap"
+  <link
+    href="https://api.fontshare.com/v2/css?f[]=rx-100@400&f[]=supreme@400,200,300&f[]=author@501,500,600,401&display=swap"
     rel="stylesheet">
+
 </head>
 
 <body>
